--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -320,10 +320,10 @@
                                         <h1 id="PageHeader" class="float-left"></h1>
 
                                     </div>
-                                    @*<div class="col-sm-12 col-md-9 col-lg-9">
+                                    <div class="col-sm-12 col-md-9 col-lg-9">
                                             <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn">Create</button>
                                             <input type="text" placeholder="Type Keyword" id="global_filter" class="searchBox pull-right pl-4 p-2 pull-right rounded rounded-lg   mr-3">
-                                        </div>*@
+                                        </div>
                                 </div>
                             </div>
                         </div>
@@ -412,9 +412,6 @@
 
 
             $().ready(function () {
-
-
-
                 $sidebar = $('.sidebar');
 
                 $sidebar_img_container = $sidebar.find('.sidebar-background');
@@ -585,7 +582,7 @@
         });
     </script>
 
-    @*<script>
+    <script>
             function filterGlobal() {
 
                 $('#datatable').DataTable().search(
@@ -636,6 +633,8 @@
             });
             $(document).ready(function () {
                 $().ready(function () {
+
+                    $("#datatable_filter").hide()
 
                     $sidebar = $('.sidebar');
 
@@ -805,7 +804,7 @@
                 });
 
             });
-        </script>*@
+        </script>
 </body>
 
 </html>
