--- a/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
@@ -379,7 +379,7 @@
 
                                     </div>
                                     <div class="col-sm-12 col-md-9 col-lg-9">
-                                        <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn">Create</button>
+                                        <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn" id="global_Createbtn">Create</button>
                                         <input type="text" placeholder="Type Keyword" id="global_filter" class="searchBox pull-right pl-4 p-2 pull-right rounded rounded-lg   mr-3">
                                     </div>
                                 </div>
