--- a/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
@@ -135,7 +135,7 @@
                             <p>Student Assignments</p>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a href="@Url.Action("ViewTopicsAndLessons", "AspnetSubjectTopics")" class="nav-link nav-toggle">
 
                             <i class="sea-dash">
@@ -151,7 +151,7 @@
                             </i>
                             <p>Questions & Quizs</p>
                         </a>
-                    </li>
+                    </li>*@
 
                     <li class="nav-item">
                         <a href="@Url.Action("StudentLessonTracking", "StudentAssignmentSubmitted")" class="nav-link nav-toggle">
