--- a/SEA_Application/Views/AspNetNotes/Create.cshtml
+++ b/SEA_Application/Views/AspNetNotes/Create.cshtml
@@ -45,7 +45,7 @@
 
                 <div class="form-row mt-4">
                     <div class="form-group col-md-12 bmd-form-group">
-                        <label class="bmd-label-static pl-2">Subject</label>
+                        <label class="control-label">Subject</label>
 
                         @Html.DropDownList("SubjectID", null, htmlAttributes: new { @class = "form-control", @required = true })
                         @Html.ValidationMessageFor(model => model.SubjectID, "", new { @class = "text-danger" })
@@ -56,7 +56,7 @@
                 <div class="form-row mt-4">
                     <div class="form-group col-md-12 bmd-form-group">
 
-                        @Html.LabelFor(model => model.CourseType, htmlAttributes: new { @class = "bmd-label-static pl-2" })
+                        @Html.LabelFor(model => model.CourseType, htmlAttributes: new { @class = "control-label" })
 
                         <select name="CourseType" class="form-control" required>
                             <option value="CSS">CSS</option>
@@ -69,7 +69,7 @@
                 <div class="form-row mt-4">
                     <div class="form-group col-md-12 bmd-form-group">
 
-                        @Html.LabelFor(model => model.NotesType, htmlAttributes: new { @class = "bmd-label-static pl-2", @required = true })
+                        @Html.LabelFor(model => model.NotesType, htmlAttributes: new { @class = "control-label", @required = true })
                         <div>
                             <select id="Notestype" name="NotesType" class="form-control" required>
                                 <option value="Choose">Select One</option>
@@ -154,49 +154,48 @@
 
                 </div>
                 <br />
+                
+              
+                    <div class="form-group row">
 
-                <div class="form-group">
+                        <label class="control-label col-md-4">OA Price</label>
+                        <div class="col-md-4">
+                            Rs <span id="oAPrice">0.0</span>/-
+                        </div>
+                    </div>
 
-                    <label class="control-label col-md-4">OA Price</label>
+                    <div class="form-group row">
 
-                    <label class="control-label  col-md-4">    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   Rs <span id="oAPrice">0.0</span>/-</label>
+                        <label class="control-label col-md-4">PhotoCopier Price</label>
+                        <div class="col-md-4">
+                            Rs <span id="photoCopierPrice">0.0</span>/-
+                        </div>
+                    </div>
+                    <div class="form-group row">
+
+                        <label class="control-label col-md-4">Grand Total</label>
+                        <div class="col-md-4">
+                            Rs <span id="grandTotal">0.0</span>/-
+                        </div>
+                    </div>
+
+
+
+
+
+                </div> <!--End of Col 8-->
+               <br>
+                <div class="col-md-8 pl-5 pr-5 ">
+                    <button type="submit" class="btn btn-primary rounded rounded-lg"> Save </button>
+
+
+                    <button type="button" id="cancel" onclick="redirect()" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                        <i class="material-icons mr-2">cached</i>  Cancel
+                    </button>
+
 
 
                 </div>
-
-                <div class="form-group">
-
-                    <label class="control-label  col-md-4">PhotoCopier Price</label>
-
-                    <label class="control-label  col-md-4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    Rs <span id="photoCopierPrice">0.0</span>/- </label>
-
-                </div>
-                <div class="form-group">
-
-                    <label class="control-label  col-md-4">Grand Total</label>
-
-                    <label class="control-label  col-md-4">      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    Rs <span id="grandTotal">0.0</span>/-</label>
-
-                </div>
-
-
-
-
-
-
-            </div> <!--End of Col 8-->
-
-            <div class="col-md-8 pl-5 pr-5 ">
-                <button type="submit" class="btn btn-primary rounded rounded-lg"> Save </button>
-
-
-                <button type="button"  id="cancel" onclick="redirect()" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
-                    <i class="material-icons mr-2">cached</i>  Cancel
-                </button>
-
-
-
-            </div>
 
                 }
 
