--- a/SEA_Application/Views/AspnetQuizs/Create.cshtml
+++ b/SEA_Application/Views/AspnetQuizs/Create.cshtml
@@ -2,12 +2,21 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_TeacherDashboardLayout.cshtml";
+    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
 
 <script>
     $(document).ready(function () {
+
+          
+        $("#PageHeader").html("Add Quiz");
+
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/AspnetQuestions/ViewQuestionAndQuiz">Question & Quiz </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Create</a></li>');
+
+
 
         $("#btnCancel").click(function () {
 
@@ -85,12 +94,12 @@
             }
             else {
 
-                   var $el = $(".SubIdDDL");
-                    $el.empty();
-                    var $e2 = $(".TopIdDDL");
-                    $e2.empty();
-                   var $e3 = $("#QuestionID");
-                    $e3.empty();
+                var $el = $(".SubIdDDL");
+                $el.empty();
+                var $e2 = $(".TopIdDDL");
+                $e2.empty();
+                var $e3 = $("#QuestionID");
+                $e3.empty();
             }
 
 
@@ -173,140 +182,152 @@
 </script>
 
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    <div class="box box-primary">
-        <div class="box-title"></div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="box box-primary">
+                        <div class="box-title"></div>
 
-        <div class="box-body">
-            <div class="form-horizontal">
-                <h4>Create Quiz</h4>
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-2">
-                        Start Date
-                    </div>
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.Start_Date, new { htmlAttributes = new { type = "date", @class = "form-control", @required = true } })
-                        @Html.ValidationMessageFor(model => model.Start_Date, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-
-                    <div class="col-md-2">
-                        Due Date
-                    </div>
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.Due_Date, new { htmlAttributes = new { type = "date", @class = "form-control", @required = true } })
-                        @Html.ValidationMessageFor(model => model.Due_Date, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                @*<div class="form-group">
-                    <div class="col-md-2">
-                        <label>Section <span class="text-danger">*</span></label>
-                    </div>
-                    <div class="col-md-6">
-                        <select class="form-control SecIdDDL" id="SecId" name="SecId"></select>
-                    </div>
-                </div>*@
-
-                <div class="form-group">
-                    <div class="col-md-2">
-                        <label>Course Type <span class="text-danger">*</span></label>
-                    </div>
-                    <div class="col-md-6">
-                        <select class="form-control CTIdDDL" id="CTId" name="CTId">
-
-                            <option value="">Select One</option>
-
-                            <option value="CSS">CSS</option>
-                            <option value="PMS">PMS</option>
-
-                        </select>
-
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-2">
-                        <label>Subject <span class="text-danger">*</span></label>
-                    </div>
-                    <div class="col-md-6">
-                        <select class="form-control SubIdDDL" id="SubId" name="SubId"></select>
-                    </div>
-                </div>
-
-                <div class="form-group">
-
-                    <div class="col-md-12">
-
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="box box-primary">
-                                    <div class="box-header with-border"><h3 class="orange">Topics:<span class="red-mark">*</span></h3></div>
-
-                                    <div class="box-body">
-
-                                        @*@Html.ListBox("TopicId", null, htmlAttributes: new { @class = "form-control", @style = "height:400px;" })*@
-                                        <select multiple style="height:400px;overflow-x:scroll" class="form-control" id="TopicId" name="TopicId" required></select>
-
-
+                        <div class="box-body">
+                            <div class="form-horizontal">
+                              
+                               
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-6">
+                                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
+                                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                                     </div>
-
                                 </div>
-                            </div>
 
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-6">
+                                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-                            <div class="col-md-6">
-                                <div class="box box-primary">
-                                    <div class="box-header with-border"><h3 class="orange">Questions:<span class="red-mark">*</span></h3></div>
+                                <div class="form-group">
+                                    <div class="col-md-2">
+                                        Start Date
+                                    </div>
+                                    <div class="col-md-6">
+                                        @Html.EditorFor(model => model.Start_Date, new { htmlAttributes = new { type = "date", @class = "form-control", @required = true } })
+                                        @Html.ValidationMessageFor(model => model.Start_Date, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-                                    <div class="box-body">
-                                        <select multiple style="height:400px;overflow-x:scroll" class="form-control" id="QuestionID" name="QuestionID" required></select>
+                                <div class="form-group">
+
+                                    <div class="col-md-2">
+                                        Due Date
+                                    </div>
+                                    <div class="col-md-6">
+                                        @Html.EditorFor(model => model.Due_Date, new { htmlAttributes = new { type = "date", @class = "form-control", @required = true } })
+                                        @Html.ValidationMessageFor(model => model.Due_Date, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                @*<div class="form-group">
+                                        <div class="col-md-2">
+                                            <label>Section <span class="text-danger">*</span></label>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <select class="form-control SecIdDDL" id="SecId" name="SecId"></select>
+                                        </div>
+                                    </div>*@
+
+                                <div class="form-group">
+                                    <div class="col-md-2">
+                                        <label>Course Type <span class="text-danger">*</span></label>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <select class="form-control CTIdDDL" id="CTId" name="CTId">
+
+                                            <option value="">Select One</option>
+
+                                            <option value="CSS">CSS</option>
+                                            <option value="PMS">PMS</option>
+
+                                        </select>
 
                                     </div>
                                 </div>
-                            </div>
+                                <div class="form-group">
+                                    <div class="col-md-2">
+                                        <label>Subject <span class="text-danger">*</span></label>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <select class="form-control SubIdDDL" id="SubId" name="SubId"></select>
+                                    </div>
+                                </div>
 
+                                <div class="form-group">
+
+                                    <div class="col-md-12">
+
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="box box-primary">
+                                                    <div class="box-header with-border"><h3 class="orange">Topics:<span class="red-mark">*</span></h3></div>
+
+                                                    <div class="box-body">
+
+                                                        @*@Html.ListBox("TopicId", null, htmlAttributes: new { @class = "form-control", @style = "height:400px;" })*@
+                                                        <select multiple style="height:400px;overflow-x:scroll" class="form-control" id="TopicId" name="TopicId" required></select>
+
+
+                                                    </div>
+
+                                                </div>
+                                            </div>
+
+
+                                            <div class="col-md-6">
+                                                <div class="box box-primary">
+                                                    <div class="box-header with-border"><h3 class="orange">Questions:<span class="red-mark">*</span></h3></div>
+
+                                                    <div class="box-body">
+                                                        <select multiple style="height:400px;overflow-x:scroll" class="form-control" id="QuestionID" name="QuestionID" required></select>
+
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+
+
+
+                                <div class="form-group">
+                                    <div class="col-md-offset-1 col-md-10">
+                                        <input type="submit" value="Create" class="btn btn-primary" />
+
+                                        <button type="button" class="btn btn-danger" id="btnCancel">Cancel</button>
+                                    </div>
+                                </div>
+
+                                <br />
+                            </div>
                         </div>
                     </div>
-                </div>
+                }
 
 
 
-                <div class="form-group">
-                    <div class="col-md-offset-1 col-md-10">
-                        <input type="submit" value="Create" class="btn btn-primary" />
-
-                        <button type="button" class="btn btn-danger" id="btnCancel">Cancel</button>
-                    </div>
-                </div>
-
-                <br />
             </div>
         </div>
     </div>
-}
-<script>
+</div>
+                
+                <script>
 
 
     $(document).ready(function () {
@@ -356,35 +377,18 @@
                         // var classname = $("#ClassID option[value='" + item.ClassID + "']").text();
                         $('#TopicId').append('<option value=' + item.Id + '>' + item.Name + ' </option>');
 
-
-
-
                     });
-
-
-
-
-
 
                 }
 
 
             })
 
-
-
-
-
-
         })
-
-
 
     })
 
-
-
-</script>
+   </script>
 
 
 
