--- a/SEA_Application/Views/AspnetSubjectTopics/Create.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/Create.cshtml
@@ -2,7 +2,8 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_TeacherDashboardLayout.cshtml";
+
+    Layout = "~/Views/Shared/_AdminDashboardLayout.cshtml";
 }
 
 <style>
@@ -28,10 +29,22 @@
 <script>
 
     $(document).ready(function () {
+
+
+        $("#PageHeader").html("Add Topic");
+
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li> <a href="/AspnetSubjectTopics/ViewTopicsAndLessons"> Topic </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Create</a></li>');
+
+
+
         $("#btnCancel").click(function () {
 
             window.location.href = "/AspnetSubjectTopics/ViewTopicsAndLessons";
         })
+
+
 
 
         var course = 'CSS';
@@ -73,8 +86,8 @@
 
             }
             else {
-                  var $el = $(".SubIdDDL");
-                    $el.empty();
+                var $el = $(".SubIdDDL");
+                $el.empty();
             }
 
         });
@@ -117,112 +130,68 @@
 
 </script>
 
-<div class="box-header with-border"><h3 class="orange">Create Topic<span class="red-mark">*</span></h3></div>
 
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+<div class="row">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-body p-5">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-    <div class="box box-primary">
-        <div class="form-horizontal">
-            <h4></h4>
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-6">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true  } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
+                    <div class="col-md-8 pl-5 pr-5 ">
+                        <h2 class="column-heading mb-4"> Topic Info</h2>
+                        <div class="form-group bmd-form-group is-filled">
+                            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "bmd-label-floating" })
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control", @required = true } })
+                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group bmd-form-group is-filled">
+                            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "bmd-label-floating" })
+                            @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control", @required = true } })
+                            @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                        </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-6">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                </div>
-            </div>
+                        <div class="form-row mt-4">
+                            <div class="form-group col-md-12 bmd-form-group">
+                                <label for="" class="bmd-label-static pl-2">Course Type*</label>
 
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { type = "date", @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                                <select class="form-control CTIdDDL" id="CTId" name="CTId">
+                                    <option value="">Select One</option>
+                                    <option value="CSS">CSS</option>
+                                    <option value="PMS">PMS</option>
+
+                                </select>
+
+
+                            </div>
+                        </div>
+
+                        <div class="form-row mt-4">
+                            <div class="form-group col-md-12 bmd-form-group">
+                                <label for="" class="bmd-label-static pl-2">Subject*</label>
+
+                                <select class="form-control SubIdDDL" id="SubjectId" name="SubjectId" required></select>    
+
+                            </div>
+                        </div>
+
+                    </div> <!-- End Column -->
+                    
+
+                    <div class="col-md-8 pl-5 pr-5 ">
+                        <button type="submit" class="btn btn-primary rounded rounded-lg"> Save </button>
+
+
+                        <button type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                            <i class="material-icons mr-2">cached</i>  Cancel
+                        </button>
+
                     </div>
-                </div>
+                }
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { type = "date", @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-
-            
-            @*<div class="form-group">
-                <label class="col-md-2 col-lg-2 control-label"> Section:<span class="red-mark">*</span></label>
-                <div class="col-md-6">
-                    @Html.DropDownList("ClassID", null, htmlAttributes: new { @class = "form-control text_box_style", @required = true })
-
-                    <span style="color:red"> @ViewBag.SubjectsErrorMsg</span>
-                </div>
-
-            </div>*@
-
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.SubjectId, "SubjectId", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-6">
-
-                        @Html.DropDownList("SubjectId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.SubjectId, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-
-
-
-            <div class="form-group">
-                <div class="col-md-2">
-                    <label>Course Type <span class="text-danger">*</span></label>
-                </div>
-                <div class="col-md-6">
-
-                    <select class="form-control CTIdDDL" id="CTId" name="CTId">
-                        <option value="">Select One</option>
-                        <option value="CSS">CSS</option>
-                        <option value="PMS">PMS</option>
-
-                    </select>
-
-                </div>
             </div>
-
-            <div class="form-group">
-                <div class="col-md-2">
-                    <label>Subject <span class="text-danger">*</span></label>
-                </div>
-                <div class="col-md-6">
-                    <select class="form-control SubIdDDL" id="SubjectId" name="SubjectId" required></select>
-                </div>
             </div>
-
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.FAQ, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-6">
-                    @Html.TextAreaFor(model => model.FAQ, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FAQ, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                    <button type="button" class="btn btn-danger" id="btnCancel">Cancel</button>
-                </div>
-            </div>
-        </div>
     </div>
-}
+</div>
