--- a/SEA_Application/Views/AspNetSubject/ClassIndex.cshtml
+++ b/SEA_Application/Views/AspNetSubject/ClassIndex.cshtml
@@ -537,7 +537,7 @@ else
                                     <br />
                                     <div class="form-row mt-4">
                                         <div class="form-group col-md-12 bmd-form-group">
-                                            <label for="" class="bmd-label-static pl-2">Select Section </label>
+                                            <label for="" class="control-label">Select Section </label>
 
                                             @Html.DropDownList("ClassID1", null, "Select One ", htmlAttributes: new { @class = "form-control text_box_style", name = "ClassID1", @required = true })
                                         </div>
@@ -545,7 +545,7 @@ else
 
                                     <div class="form-row mt-4">
                                         <div class="form-group col-md-12 bmd-form-group">
-                                            <label for="" class="bmd-label-static pl-2">Select Teacher* </label>
+                                            <label for="" class="control-label">Select Teacher* </label>
 
                                             <select class="form-control" id="teachers" name="teachers">
                                                 <option value="">Select One</option>
