--- a/SEA_Application/Views/Admin_Dashboard/StudentRegister.cshtml
+++ b/SEA_Application/Views/Admin_Dashboard/StudentRegister.cshtml
@@ -20,7 +20,7 @@
 
         document.getElementById('DueDate').valueAsDate = new Date();
 
-        $('#cancel').click(function () {StudentsIndex
+        $('#cancel').click(function () {
             window.location.href = '@Url.Action("StudentsIndex", "AspNetUser")';
         });
 
@@ -758,7 +758,7 @@
                                     <div class="col-md-2 pl-3 pr-5">
                                         <div style="height: 120px;" class="upload-photo border rounded d-flex align-items-center justify-content-center flex-column mb-4">
                                             <a href="#">
-                                                <img id="imgPreview" src="../assets/assets/icons/Upload.png" onclick="$('#UploadImg').click();" />
+                                                <img id="imgPreview" src="~/Content/Images/Upload.png" onclick="$('#UploadImg').click();" />
                                             </a>
                                             <input style="display:none;" id="UploadImg" type="file" name="image" />
                                             <div id="UploadPhotoDiv" class="mt-3">Upload Photo</div>
@@ -1021,8 +1021,8 @@
                                 <hr class="mt-5 mb-4">
 
                                 <button type="submit" id="FormSubmit" class="btn btn-primary pull-right rounded rounded-lg"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Save &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </button>
-                                <button type="button" class="btn btn-primary pull-right rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
-                                    <i class="material-icons mr-2">cached</i>  Reset &nbsp; &nbsp;
+                                <button id="cancel" type="button" class="btn btn-primary pull-right rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
+                                    <i class="material-icons mr-2">cached</i>  Cancel &nbsp; &nbsp;
                                 </button>
                                 <div class="clearfix"></div>
                             }
