--- a/SEA_Application/Views/Admin_Dashboard/AccountantRegister.cshtml
+++ b/SEA_Application/Views/Admin_Dashboard/AccountantRegister.cshtml
@@ -315,7 +315,7 @@
                                     <div class="col-md-2 pl-3 pr-5">
                                         <div style="height: 120px;" class="upload-photo border rounded d-flex align-items-center justify-content-center flex-column mb-4">
                                             <a href="#">
-                                                <img id="imgPreview" src="../assets/assets/icons/Upload.png" onclick="$('#UploadImg').click();" />
+                                                <img id="imgPreview" src="~/Content/Images/Upload.png" onclick="$('#UploadImg').click();" />
                                             </a>
                                             <input style="display:none;" id="UploadImg" type="file" name="image" />
                                             <div id="UploadPhotoDiv" class="mt-3">Upload Photo</div>
