--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -49,7 +49,7 @@
             -->
             <div class="logo">
                 <a class="simple-text logo-normal" href="#">
-                    <img class="transparent" alt="" src="~/Content/assets/assets/img/logo%20SEA1.png">
+                    <img class="transparent" alt="" src="~/Content/assets/assets/img/orignal.png" height="143" width="143">
                 </a>
             </div>
             <div class="sidebar-wrapper">
@@ -325,7 +325,7 @@
                                     </p>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                                    <a class="dropdown-item" href="#">Profile</a>
+                                    <a class="dropdown-item" href="/Manage/Index">Profile</a>
                                     <a class="dropdown-item" href="#">Privacy</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#">Settings</a>
