--- a/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
+++ b/SEA_Application/Views/AspNetUser/StudentsIndex.cshtml
@@ -64,12 +64,12 @@
 
 
       $('.table').on('click', 'tbody tr', function() {
-            var td = $(this).children("td");
+            //var td = $(this).children("td");
 
        
             if ($(td).html() != "No data available in table");
 
-             window.location.href = "StudentDetail?userName=" + $(td[1]).html();
+            // window.location.href = "StudentDetail?userName=" + $(td[1]).html();
 
       });
 
